hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__fpow@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal double @_hl.main.1(double %0, double %1) {
alloca_block:
  %"0" = alloca double, align 8
  %"2_0" = alloca double, align 8
  %"2_1" = alloca double, align 8
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, double* %"2_0", align 8
  store double %1, double* %"2_1", align 8
  %"2_01" = load double, double* %"2_0", align 8
  %"2_12" = load double, double* %"2_1", align 8
  %2 = call double @llvm.pow.f64(double %"2_01", double %"2_12")
  store double %2, double* %"4_0", align 8
  %"4_03" = load double, double* %"4_0", align 8
  store double %"4_03", double* %"0", align 8
  %"04" = load double, double* %"0", align 8
  ret double %"04"
}

; Function Attrs: nofree nosync nounwind readnone speculatable willreturn
declare double @llvm.pow.f64(double, double) #0

attributes #0 = { nofree nosync nounwind readnone speculatable willreturn }
